# Raytracer

./: .gitignore  .jscpd.json  ;  CMakeLists.txt  CPPLINT.cfg  README.md
Engine/: CMakeLists.txt  Engine - Verknüpfung.lnk  build.sh  main.cpp  makebuild.sh
Engine/RaytracerGUI/: RaytracerGUI.deps.json
Engine/TCP/: CMakeLists.txt  main.cpp
Engine/TCP/includes/: CMakeLists.txt  CommandManager.hpp  ParsedTcpCommand.hpp  TcpCommand.hpp  TcpCommandFactory.hpp  TcpExecuter.hpp  TcpParser.hpp  TcpServer.hpp
Engine/TCP/includes/CommandImplementations/: CMakeLists.txt  CloseRenderCommand.hpp  GetChildEntitiesCommand.hpp  GetComponentsCommand.hpp  GetEntityOptionsCommand.hpp  GetRootCommand.hpp  ImportJsonCommand.hpp  MoveCommand.hpp  RotateCommand.hpp  ScaleCommand.hpp
Engine/TCP/includes/utility/: CMakeLists.txt  JsonConverter.hpp
Engine/TCP/src/tcp_client/: EcsApi.cs  Gui.cs  TcpClient.cs  data.json
Engine/TCP/src/tcp_server/: CMakeLists.txt  CommandManager.cpp  ParsedTcpCommand.cpp  TcpCommandFactory.cpp  TcpExecuter.cpp  TcpServer.cpp
Engine/assets/: ReadMe!.txt  Teapot.mtl  apple.mtl  bottles1.mtl  default.mtl  processor.mtl  teapot.xml  teapotonchess.mtl  teapotonchess.xml
Engine/core/: CMakeLists.txt  build.sh
Engine/core/includes/: Engine.hpp  Entity.hpp  EntitySystem.hpp  FileManager.hpp  RenderSystem.hpp  Scene.hpp  SceneManager.hpp  ShaderCompiler.hpp  SimpleComponent.hpp  System.hpp  UUIDManager.hpp  WindowManager.hpp
Engine/core/includes/component/: CameraComponent.hpp  Component.hpp  RenderComponent.hpp  SimpleComponent.hpp
Engine/core/includes/system/: CameraSystem.hpp  EntityStorage.hpp  EntitySystem.hpp  IStorage.hpp  RenderSystem.hpp  SimpleSystem.hpp  System.hpp
Engine/core/includes/utility/: Canvas.hpp  NotSupportedError.hpp  SimpleLogger.hpp  TablePrinter.hpp  VariadicTable.hpp  bvhtree.hpp  bvhtree_tiny.hpp
Engine/core/shaders/: computeShaderTesting.glsl  computeShaderWithTriangles.glsl  computeshaderCircle.glsl  fragmentshader.glsl  vertexshader.glsl
Engine/core/src/: Component.cpp  Engine.cpp  Entity.cpp  FileManager.cpp  RenderComponent.cpp  Scene.cpp  SceneManager.cpp  SimpleSystem.cpp  UUIDManager.cpp  WindowManager.cpp  main.cpp
Engine/core/src/component/: CameraComponent.cpp  Component.cpp  RenderComponent.cpp  SimpleComponent.cpp
Engine/core/src/system/: CameraSystem.cpp  EntityStorage.cpp  EntitySystem.cpp  (+4 more)
Engine/includes/: AssetManager.hpp  CMakeLists.txt  Engine.hpp  Entity.hpp  Scene.hpp  ShaderCompiler.hpp  UUIDManager.hpp  WindowManager.hpp
Engine/includes/component/: CMakeLists.txt  CameraComponent.hpp  Component.hpp  LightComponent.hpp  RenderComponent.hpp  SimpleComponent.hpp
Engine/includes/system/: CMakeLists.txt  CameraSystem.hpp  EntityStorage.hpp  IStorage.hpp  LightSystem.hpp  RenderSystem.hpp  SimpleSystem.hpp  Storage.hpp  System.hpp
Engine/includes/tcp_server/: CMakeLists.txt  CommandManager.hpp  ParsedTcpCommand.hpp  TcpCommand.hpp  TcpCommandFactory.hpp  TcpExecuter.hpp  TcpParser.hpp  TcpServer.hpp
Engine/includes/utility/: BigJsonReader.hpp  CMakeLists.txt  CPPLINT.cfg  Canvas.hpp  FrameSnapshot.hpp  JSONConvertable.hpp  JsonConverter.hpp  Log.hpp  NotImplementedError.hpp  Snapshot.hpp  Timer.hpp  VariadicTable.hpp  bvhtree_tiny.hpp  data_loader.hpp  obj_loader.hpp  quicktype_json.hpp
Engine/json/: JsonDefault.json  JsonParser_DummyFile.json  JsonParser_DummyFile_copy.json
Engine/lib/pkgconfig/: glfw3.pc  gmock.pc  gmock_main.pc  gtest.pc  gtest_main.pc
Engine/shaders/: computeShaderWithTriangles.glsl  computeshaderCircle.glsl
Engine/src/: AssetManager.cpp  CMakeLists.txt  Engine.cpp  Entity.cpp  Scene.cpp  UUIDManager.cpp  WindowManager.cpp
Engine/src/component/: CMakeLists.txt  CameraComponent.cpp  Component.cpp  LightComponent.cpp  RenderComponent.cpp  SimpleComponent.cpp
Engine/src/system/: CMakeLists.txt  CameraSystem.cpp  EntityStorage.cpp  IStorage.cpp  LightSystem.cpp  RenderSystem.cpp  SimpleSystem.cpp  Storage.cpp  System.cpp
Engine/src/tcp_server/: CMakeLists.txt  CommandManager.cpp  ParsedTcpCommand.cpp  TcpCommandFactory.cpp  TcpExecuter.cpp  TcpParser.cpp  TcpServer.cpp
Engine/src/utility/: BigJsonReader.cpp  CMakeLists.txt  Canvas.cpp  FrameSnapshot.cpp  Log.cpp  NotSupportedError.cpp  Snapshot.cpp  TablePrinter.cpp  Timer.cpp
OBJ_Loading/: CMakeLists.txt
OBJ_Loading/src/: main.cpp
TCP/: CMakeLists.txt  README.md
TCP/includes/: CommandManager.hpp  MoveCommand.hpp  RotateCommand.hpp  TcpCommand.hpp  TcpCommandFactory.hpp  TcpExecuter.hpp  TcpParser.hpp  TcpServer.hpp
TCP/src/tcp_client/: EcsApi.cs  Gui.cs  Program.cs  TcpClient.cs
TCP/src/tcp_server/: CommandManager.cpp  TcpCommandFactory.cpp  TcpExecuter.cpp  TcpParser.cpp  TcpServer.cpp
TCP/tests/: test_tcp.cpp
core/: CMakeLists.txt  build.sh  makebuild.sh
core/includes/: Component.hpp  Engine.h  Engine.hpp  Entity.hpp  EntitySystem.hpp  RenderComponent.h  RenderComponent.hpp  RenderSystem.h  RenderSystem.hpp  Scene.hpp  SceneManager.hpp  ShaderCompiler.h  ShaderCompiler.hpp  SimpleComponent.hpp  SimpleSystem.hpp  System.hpp  UUIDManager.hpp  WindowEngine.h  component.hpp  dummy_component.hpp  entity.hpp  entity_system.h  scene.hpp  scene_manager.hpp  simple_component.hpp  simple_system.hpp  uuid_manager.hpp
core/includes/component/: Component.hpp  SimpleComponent.hpp
core/includes/system/: EntitySystem.hpp  System.hpp
core/includes/utility/: SimpleLogger.hpp  TablePrinter.hpp
core/shaders/: computeShaderPreviousCircle.glsl  computeShaderTesting.glsl  computeshader.glsl  computeshaderCircle.glsl  fragmentshader.glsl  vertexshader.glsl
core/src/: Component.cpp  Engine.cpp  Entity.cpp  EntitySystem.cpp  RenderComponent.cpp  RenderSystem.cpp  Scene.cpp  SceneManager.cpp  SimpleComponent.cpp  SimpleSystem.cpp  System.cpp  UUIDManager.cpp  WindowManager.cpp  component.cpp  dummy_component.cpp  entity.cpp  entity_system.cpp  main.cpp  scene.cpp  scene_manager.cpp  simple_component.cpp  simple_system.cpp  uuid_manager.cpp
core/src/system/: EntitySystem.cpp
core/src/utility/: TablePrinter.cpp
(+129 files in other folders)
